--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <script src="https://www.gstatic.com/firebasejs/11.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/11.10.0/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/11.10.0/firebase-analytics.js"></script>
+    <!-- Replace your current Firebase SDK imports with these: -->
+<script src="https://www.gstatic.com/firebasejs/11.10.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.10.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.10.0/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.10.0/firebase-storage-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.10.0/firebase-analytics-compat.js"></script>
     
     <script>
         // Your Firebase configuration
