--- a/index2.html
+++ b/index2.html
@@ -456,7 +456,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="https://via.placeholder.com/150x50?text=Royal+Mandi" alt="The Royal Mandi" class="img-fluid">
+                <img src="img/bg-logo.jpg" alt="The Royal Mandi" class="img-fluid">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -1231,7 +1231,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-5 mb-lg-0">
-                    <img src="https://via.placeholder.com/150x50?text=Royal+Mandi" alt="The Royal Mandi" class="footer-logo">
+                    <img src="img/bg-logo.jpg" alt="The Royal Mandi" class="footer-logo">
                     <p>Bringing authentic Indian flavors to Middlesbrough since 2015. Our passion for traditional cooking techniques and premium ingredients ensures an unforgettable dining experience.</p>
                     <div class="social-icons">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -1315,7 +1315,7 @@
     <div id="adminDashboard" style="display: none;">
         <div class="admin-sidebar">
             <div class="admin-sidebar-header">
-                <img src="https://via.placeholder.com/150x50?text=Royal+Mandi" alt="The Royal Mandi" class="admin-sidebar-logo">
+                <img src="img/bg-logo.jpg" alt="The Royal Mandi" class="admin-sidebar-logo">
             </div>
             <div class="admin-nav">
                 <a href="#" class="admin-nav-link active" data-section="dashboard"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
