--- a/index2.html
+++ b/index2.html
@@ -456,7 +456,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="img/bg-logo.jpg" alt="The Royal Mandi" class="img-fluid">
+                <img src="img/logonv.png" alt="The Royal Mandi" class="img-fluid">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
