--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -244,13 +244,13 @@
     <script>
         // Initialize Firebase (same config as login page)
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_SENDER_ID",
-            appId: "YOUR_APP_ID",
-            measurementId: "YOUR_MEASUREMENT_ID"
+           apiKey: "AIzaSyC7Y0BVRoH9m1B8jzYKvI61csT4bnifXEU",
+    authDomain: "royal-mandi.firebaseapp.com",
+    projectId: "royal-mandi",
+    storageBucket: "royal-mandi.firebasestorage.app",
+    messagingSenderId: "285256672352",
+    appId: "1:285256672352:web:9cee8057176e4885ed8f05",
+    measurementId: "G-YC7ZK7Y81H"
         };
         
         firebase.initializeApp(firebaseConfig);
