--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         
         /* Hero Section */
         .hero-section {
-            background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('https://images.unsplash.com/photo-1601050690597-df0568f70950?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80');
+            background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('https://theroyalmandi.gantasolutions.com/img/logonv.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -935,7 +935,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=100&h=40&q=80" alt="The Royal Mandi" class="img-fluid">
+                <img src="https://theroyalmandi.gantasolutions.com/img/logonv.png" alt="The Royal Mandi" class="img-fluid">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -1441,7 +1441,7 @@
     <div class="admin-dashboard" id="adminDashboard">
         <div class="admin-sidebar">
             <div class="admin-sidebar-header">
-                <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=100&h=40&q=80" alt="The Royal Mandi" class="admin-sidebar-logo">
+                <img src="https://theroyalmandi.gantasolutions.com/img/logonv.png" alt="The Royal Mandi" class="admin-sidebar-logo">
                 <h6 class="mt-2 mb-0">Admin Panel</h6>
             </div>
             <div class="admin-nav">
