--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=100&h=40&q=80" alt="The Royal Mandi" class="img-fluid">
+                <img src="img/bg-logo.jpg" alt="The Royal Mandi" class="img-fluid">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -1202,7 +1202,7 @@
                 
                 <div class="col-md-6 col-lg-4 menu-item" data-category="bread">
                     <div class="menu-item-img">
-                        <img src="https://images.unsplash.com/photo-1601050690646-5ab7a0e0fe1a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Butter Nan">
+                        <img src="img/bg-logo.jpg" alt="Butter Nan">
                     </div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
@@ -1354,7 +1354,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-5 mb-lg-0">
-                    <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=100&h=50&q=80" alt="The Royal Mandi" class="footer-logo">
+                    <img src="img/bg-logo.jpg" alt="The Royal Mandi" class="footer-logo">
                     <p>Bringing authentic Indian flavors to Middlesbrough since 2015. Our passion for traditional cooking techniques and premium ingredients ensures an unforgettable dining experience.</p>
                     <div class="social-icons">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -1430,7 +1430,7 @@
                         </button>
                     </form>
                     <div class="mt-3 text-center">
-                        <small class="text-muted">For authorized personnel only</small>
+                        <small class="text-muted">For authorized personnel only(nv eripk vi) </small>
                     </div>
                 </div>
             </div>
@@ -1441,7 +1441,7 @@
     <div class="admin-dashboard" id="adminDashboard">
         <div class="admin-sidebar">
             <div class="admin-sidebar-header">
-                <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=100&h=40&q=80" alt="The Royal Mandi" class="admin-sidebar-logo">
+                <img src="img/bg-logo.jpg" alt="The Royal Mandi" class="admin-sidebar-logo">
                 <h6 class="mt-2 mb-0">Admin Panel</h6>
             </div>
             <div class="admin-nav">
