--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         
         /* Hero Section */
         .hero-section {
-            background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('https://theroyalmandi.gantasolutions.com/img/bg-hero.png');
+            background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('https://theroyalmandi.gantasolutions.com/img/bg-logo3.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
