--- a/meanu1.html
+++ b/meanu1.html
@@ -641,6 +641,212 @@ const menuData = [
         spice: 0,
         special: false
     }
+   
+    {
+        name: "Chicken Mandi",
+        price: "7.99€",
+        desc: "Basmati rice cooked with Indian aromatic spices, served with dry fruits",
+        image: "img/chicken-mandi.jpg",
+        category: "non-veg",
+        spice: 2,
+        special: false,
+        options: [
+            { portion: "1 person", price: "7.99€" },
+            { portion: "2 persons", price: "14.99€" }
+        ]
+    },
+    {
+        name: "Tandoori Chicken Mandi",
+        price: "8.99€",
+        desc: "Basmati rice with tandoori chicken and aromatic spices",
+        image: "img/tandoori-mandi.jpg",
+        category: "non-veg",
+        spice: 3,
+        special: true,
+        options: [
+            { portion: "1 person", price: "8.99€" },
+            { portion: "2 persons", price: "16.99€" }
+        ]
+    },
+    {
+        name: "Chicken Juicy Mandi",
+        price: "9.99€",
+        desc: "Special juicy chicken with mandi rice",
+        image: "img/juicy-mandi.jpg",
+        category: "non-veg",
+        spice: 2,
+        special: true,
+        options: [
+            { portion: "1 person", price: "9.99€" },
+            { portion: "2 persons", price: "18.99€" }
+        ]
+    },
+    {
+        name: "Whole Mix Chicken Family Mandi",
+        price: "35.99€",
+        desc: "Family portion with mixed chicken pieces",
+        image: "img/family-mandi.jpg",
+        category: "non-veg",
+        spice: 2,
+        special: true,
+        options: [
+            { portion: "4 persons", price: "35.99€" }
+        ]
+    },
+    {
+        name: "Lamb Mandi",
+        price: "10.99€",
+        desc: "Tender lamb with aromatic mandi rice",
+        image: "img/lamb-mandi.jpg",
+        category: "non-veg",
+        spice: 3,
+        special: false,
+        options: [
+            { portion: "1 person", price: "10.99€" },
+            { portion: "2 persons", price: "20.99€" }
+        ]
+    },
+    {
+        name: "Fish Mandi",
+        price: "8.99€",
+        desc: "Fresh fish with mandi rice and spices",
+        image: "img/fish-mandi.jpg",
+        category: "non-veg",
+        spice: 2,
+        special: false,
+        options: [
+            { portion: "1 person", price: "8.99€" },
+            { portion: "2 persons", price: "16.99€" }
+        ]
+    },
+    {
+        name: "Veg Mandi",
+        price: "6.99€",
+        desc: "Vegetarian version with mixed vegetables",
+        image: "img/veg-mandi.jpg",
+        category: "veg",
+        spice: 1,
+        special: false,
+        options: [
+            { portion: "1 person", price: "6.99€" },
+            { portion: "2 persons", price: "12.99€" }
+        ]
+    },
+
+    // Veg Starters
+    {
+        name: "Paneer Manchuria",
+        price: "5.99€",
+        desc: "Marinated paneer, onion, chillies, curry leaves, sauces & spices",
+        image: "img/paneer-manchuria.jpg",
+        category: "veg",
+        spice: 2,
+        special: false
+    },
+    {
+        name: "Chilli Paneer",
+        price: "5.99€",
+        desc: "Marinated paneer, bell pepper, onion, sauces & spices",
+        image: "img/chilli-paneer.jpg",
+        category: "veg",
+        spice: 2,
+        special: false
+    },
+    {
+        name: "Paneer Pepper Roast",
+        price: "5.99€",
+        desc: "Paneer mixed with onion, leaves, chillies, pepper & spices",
+        image: "img/paneer-pepper.jpg",
+        category: "veg",
+        spice: 3,
+        special: false
+    },
+    {
+        name: "Paneer 65 Dry",
+        price: "5.50€",
+        desc: "Marinated paneer with oil deep fry",
+        image: "img/paneer-65.jpg",
+        category: "veg",
+        spice: 2,
+        special: false
+    },
+    {
+        name: "Paneer Tikka",
+        price: "6.99€",
+        desc: "Marinated paneer with tandoori steam",
+        image: "img/paneer-tikka.jpg",
+        category: "veg",
+        spice: 2,
+        special: true
+    },
+
+    // Specials
+    {
+        name: "Chicken Liver Fry",
+        price: "5.99€",
+        desc: "Chicken liver fry with onion & chilly with spices",
+        image: "img/liver-fry.jpg",
+        category: "non-veg",
+        spice: 3,
+        special: true
+    },
+    {
+        name: "Natu Kodi Fry Biryani",
+        price: "8.99€",
+        desc: "Flavored biryani rice with country chicken fry with tamarind masala",
+        image: "img/natu-biryani.jpg",
+        category: "non-veg",
+        spice: 3,
+        special: true
+    },
+    {
+        name: "Nellore Chepala Pulusu",
+        price: "9.99€",
+        desc: "Fish with tamarind juice mixed with masalas with basmati rice",
+        image: "img/fish-pulusu.jpg",
+        category: "non-veg",
+        spice: 2,
+        special: true
+    },
+
+    // Biryanis
+    {
+        name: "Chicken Dum Biryani",
+        price: "4.50€",
+        desc: "Chicken mixed with yogurt, Indian spices, mint, onion & garlic mixed with basmati rice",
+        image: "img/chicken-biryani.jpg",
+        category: "non-veg",
+        spice: 2,
+        special: false
+    },
+    {
+        name: "Chicken Fry Piece Biryani",
+        price: "5.99€",
+        desc: "Basmati biryani rice, with chicken spicy fry",
+        image: "img/fry-biryani.jpg",
+        category: "non-veg",
+        spice: 3,
+        special: false
+    },
+    {
+        name: "Lamb Dum Biryani",
+        price: "6.50€",
+        desc: "Lamb mixed with yogurt, Indian spices, and garlic with basmati rice",
+        image: "img/lamb-biryani.jpg",
+        category: "non-veg",
+        spice: 3,
+        special: false
+    },
+    {
+        name: "Prawns Dum Biryani",
+        price: "6.99€",
+        desc: "Fragrant biryani rice with prawns and spices",
+        image: "img/prawn-biryani.jpg",
+        category: "non-veg",
+        spice: 2,
+        special: false
+    }
+
 ];
         // DOM Elements
         const menuContent = document.getElementById('menu-content');
