--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Royal Mandi -teast the telugu spices</title>
+    <title>The Royal Mandi -teast the Asia</title>
     
     <!-- Firebase SDK v9 -->
     <script type="module">
@@ -990,6 +990,7 @@
     <section id="home" class="hero-section">
         <div class="container">
             <div class="hero-content">
+                <img src="img/logo.png" alt="The Royal Mandi" class="img-fluid">
                 <h1 class="hero-title">The Royal Mandi</h1>
                 <p class="hero-subtitle">Experience authentic Indian cuisine with royal flavors and traditional cooking techniques</p>
                 <div class="hero-buttons">
