--- a/index.html
+++ b/index.html
@@ -950,7 +950,7 @@
    <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
         <a class="navbar-brand" href="#">
-            <img src="img/logo.png" alt="The Royal Mandi" class="img-fluid">
+            <img src="img/logo1.png" alt="The Royal Mandi" class="img-fluid">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
