--- a/index.html
+++ b/index.html
@@ -944,6 +944,84 @@
             100% { transform: rotate(360deg); }
         }
     </style>
+    
+
+<style>
+    /* WhatsApp Floating Button */
+    .whatsapp-float {
+        position: fixed;
+        bottom: 30px;
+        left: 30px;
+        width: 60px;
+        height: 60px;
+        background-color: #25D366;
+        color: #FFF;
+        border-radius: 50%;
+        text-align: center;
+        font-size: 30px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        z-index: 100;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: all 0.3s ease;
+    }
+
+    .whatsapp-float:hover {
+        background-color: #128C7E;
+        transform: scale(1.1);
+    }
+
+    .whatsapp-icon {
+        margin-top: 4px;
+    }
+
+    /* Scroll to Top Button */
+    .scroll-to-top {
+        position: fixed;
+        bottom: 30px;
+        right: 30px;
+        width: 50px;
+        height: 50px;
+        background-color: #e67e22;
+        color: #FFF;
+        border: none;
+        border-radius: 50%;
+        font-size: 20px;
+        cursor: pointer;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        z-index: 100;
+        display: none; /* Hidden by default */
+        transition: all 0.3s ease;
+    }
+
+    .scroll-to-top:hover {
+        background-color: #d35400;
+        transform: scale(1.1);
+    }
+</style>
+
+<script>
+    // Scroll to Top Function
+    function scrollToTop() {
+        window.scrollTo({
+            top: 0,
+            behavior: 'smooth'
+        });
+    }
+
+    // Show/Hide Scroll to Top Button
+    window.onscroll = function() {
+        var scrollButton = document.querySelector('.scroll-to-top');
+        if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
+            scrollButton.style.display = 'flex';
+            scrollButton.style.alignItems = 'center';
+            scrollButton.style.justifyContent = 'center';
+        } else {
+            scrollButton.style.display = 'none';
+        }
+    };
+</script>
 </head>
 <body>
     <!-- Navigation -->
@@ -1497,6 +1575,15 @@
             </div>
         </div>
     </div>
+    <!-- WhatsApp Chat Button (Left Side) -->
+<a href="https://wa.me/+447467473372" class="whatsapp-float" target="_blank">
+    <i class="fab fa-whatsapp whatsapp-icon"></i>
+</a>
+
+<!-- Scroll to Top Button (Right Side) -->
+<button class="scroll-to-top" onclick="scrollToTop()">
+    <i class="fas fa-arrow-up"></i>
+</button>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
