--- a/index.html
+++ b/index.html
@@ -1575,7 +1575,7 @@
             </div>
         </div>
     </div>
-    <!-- WhatsApp Chat Button (Left Side) -->
+    <!-- WhatsApp Chat Button (Left Side) --
 <a href="https://wa.me/+447467473372" class="whatsapp-float" target="_blank">
     <i class="fab fa-whatsapp whatsapp-icon"></i>
 </a>
