--- a/index.html
+++ b/index.html
@@ -999,6 +999,10 @@
         background-color: #d35400;
         transform: scale(1.1);
     }
+    .hero-title {
+    color: #FFA500; /* Orange color */
+    text-shadow: 2px 2px 5px rgba(0,0,0,0.3); /* Adjust shadow as needed */
+}
 </style>
 
 <script>
