--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
             line-height: 1.6;
             overflow-x: hidden;
         }
+        .hero-title {
+    color: #FFA500; /* Orange color */
+    text-shadow: 2px 2px 5px rgba(0,0,0,0.3); /* Adjust shadow as needed */
+}
         
         h1, h2, h3, h4, h5, h6 {
             font-family: 'Playfair Display', serif;
