--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@
             <div class="hero-content">
                 <img src="img/logo1.png" alt="The Royal Mandi" class="img-fluid">
                 <h1 class="hero-title">The Teast Of Asia</h1>
-                <p class="hero-subtitle">Experience authentic Indian cuisine with royal flavors and traditional cooking techniques</p>
+                <p class="hero-subtitle">Blend of Arabian Tradition and Asian Fire</p>
                 <div class="hero-buttons">
                     <a href="#menu" class="btn btn-primary btn-lg me-3">View Menu</a>
                     <a href="#booking" class="btn btn-outline-light btn-lg">Book a Table</a>
@@ -3045,7 +3045,178 @@ Special Requests: ${booking.specialRequests || 'None'}
         category: "bread",
         spice: 0,
         special: false
-    }
+    },
+    {
+            "name": "Tea (Bawarchi special)",
+            "price": "£2.00",
+            "desc": "Our signature masala chai with cardamom, ginger and secret spices",
+            "image": "img/tea-bawarchi-special.jpg",
+            "category": "tea_coffee",
+            "spice": 1,
+            "special": true
+        },
+        {
+            "name": "Coffee",
+            "price": "£2.00",
+            "desc": "Traditional South Indian filter coffee with frothy milk",
+            "image": "img/indian-filter-coffee.jpg",
+            "category": "tea_coffee",
+            "spice": 0,
+            "special": false
+        },
+        {
+            "name": "Ice cream (all flavours)",
+            "price": "£3.49",
+            "desc": "Homemade kulfi in mango, pistachio, rose or vanilla",
+            "image": "img/indian-kulfi.jpg",
+            "category": "desserts",
+            "spice": 0,
+            "special": false
+        },
+        {
+            "name": "Gulab jamun (3 pcs)",
+            "price": "£3.49",
+            "desc": "Golden fried khoya balls in rose-cardamom syrup",
+            "image": "img/gulab-jamun.jpg",
+            "category": "desserts",
+            "spice": 0,
+            "special": false
+        },
+        {
+            "name": "Double ka meeta",
+            "price": "£3.49",
+            "desc": "Hyderabadi bread pudding with saffron and dry fruits",
+            "image": "img/double-ka-meetha.jpg",
+            "category": "desserts",
+            "spice": 0,
+            "special": true
+        },
+        {
+            "name": "Gulab jamun with ice cream",
+            "price": "£4.49",
+            "desc": "Warm gulab jamun served with cold vanilla kulfi",
+            "image": "img/gulab-jamun-icecream.jpg",
+            "category": "desserts",
+            "spice": 0,
+            "special": true
+        },
+        {
+            "name": "Rasmalai (2 pcs)",
+            "price": "£3.99",
+            "desc": "Bengali cottage cheese patties in sweetened, flavored milk",
+            "image": "img/rasmalai.jpg",
+            "category": "desserts",
+            "spice": 0,
+            "special": true
+        },
+        {
+            "name": "Soft drink cans",
+            "price": "£1.49",
+            "desc": "Coca-Cola, Pepsi, Sprite or Fanta (330ml)",
+            "image": "img/soft-drinks-can.jpg",
+            "category": "drinks",
+            "spice": 0,
+            "special": false
+        },
+        {
+            "name": "Water",
+            "price": "£1.49",
+            "desc": "Bisleri mineral water (1L bottle)",
+            "image": "img/mineral-water.jpg",
+            "category": "drinks",
+            "spice": 0,
+            "special": false
+        },
+        {
+            "name": "Thums up",
+            "price": "£2.00",
+            "desc": "Strong Indian cola with bold flavor (300ml bottle)",
+            "image": "img/thums-up-bottle.jpg",
+            "category": "drinks",
+            "spice": 0,
+            "special": false
+        },
+        {
+            "name": "Limca",
+            "price": "£2.00",
+            "desc": "Sparkling lime-lemon drink (300ml bottle)",
+            "image": "img/limca-bottle.jpg",
+            "category": "drinks",
+            "spice": 0,
+            "special": false
+        },
+        {
+            "name": "Goli soda (all flavours)",
+            "price": "£1.49",
+            "desc": "Traditional carbonated drink in glass bottle (250ml)",
+            "image": "img/goli-soda-bottle.jpg",
+            "category": "drinks",
+            "spice": 0,
+            "special": true
+        },
+        {
+            "name": "Schweppes Tonic water",
+            "price": "£1.49",
+            "desc": "Classic Indian tonic water (200ml)",
+            "image": "img/schweppes-tonic.jpg",
+            "category": "drinks",
+            "spice": 0,
+            "special": false
+        },
+        {
+            "name": "Red bull energy drink",
+            "price": "£2.79",
+            "desc": "Energy drink (250ml can)",
+            "image": "img/red-bull-can.jpg",
+            "category": "drinks",
+            "spice": 0,
+            "special": false
+        },
+        {
+            "name": "Mango lassi",
+            "price": "£3.49",
+            "desc": "Creamy yogurt drink with alphonso mango pulp",
+            "image": "img/mango-lassi-glass.jpg",
+            "category": "drinks",
+            "spice": 0,
+            "special": true
+        },
+        {
+            "name": "Sweet lassi",
+            "price": "£3.49",
+            "desc": "Traditional sweet yogurt drink with rose water",
+            "image": "img/sweet-lassi-glass.jpg",
+            "category": "drinks",
+            "spice": 0,
+            "special": false
+        },
+        {
+            "name": "Salt lassi",
+            "price": "£3.49",
+            "desc": "Savory spiced yogurt drink with roasted cumin",
+            "image": "img/salted-lassi-glass.jpg",
+            "category": "drinks",
+            "spice": 1,
+            "special": false
+        },
+        {
+            "name": "Lemon juice salt (Fresh)",
+            "price": "£3.49",
+            "desc": "Fresh nimbu pani with black salt and mint",
+            "image": "img/salted-lemonade.jpg",
+            "category": "drinks",
+            "spice": 1,
+            "special": false
+        },
+        {
+            "name": "Lemon juice sweet (Fresh)",
+            "price": "£3.49",
+            "desc": "Fresh lemonade with sugar and basil seeds",
+            "image": "img/sweet-lemonade.jpg",
+            "category": "drinks",
+            "spice": 0,
+            "special": false
+        }
 ];
         // DOM Elements
         const menuContent = document.getElementById('menu-content');
