--- a/index.html
+++ b/index.html
@@ -3062,7 +3062,7 @@ Special Requests: ${booking.specialRequests || 'None'}
         special: false
     },
     {
-            "name": "Tea (Bawarchi special)",
+            "name": "Tea ",
             "price": "£2.00",
             "desc": "Our signature masala chai with cardamom, ginger and secret spices",
             "image": "img/tea-bawarchi-special.jpg",
@@ -3071,7 +3071,7 @@ Special Requests: ${booking.specialRequests || 'None'}
             "special": true
         },
         {
-            "name": "Coffee",
+            "name": "Filter Coffee",
             "price": "£2.00",
             "desc": "Traditional South Indian filter coffee with frothy milk",
             "image": "img/indian-filter-coffee.jpg",
