--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ s0.parentNode.insertBefore(s1,s0);
 
 .menu-item-img img {
     width: 100%;
-    height: 3000; /* Let height adjust automatically */
+    height: 300%; /* Let height adjust automatically */
     object-fit: cover; /* Ensures image covers area without distortion */
     transition: transform 0.5s ease;
 }
