--- a/index.html
+++ b/index.html
@@ -314,20 +314,20 @@ s0.parentNode.insertBefore(s1,s0);
         }
         
         .menu-item-img {
-    height: 300px; /* Fixed height for container */
-    overflow: hidden;
-    position: relative;
-    width: 100%; /* Ensures container takes full width of parent */
+    height: 300px;       /* Fixed container height */
+    width: 100%;         /* Full width of parent */
+    overflow: hidden;     /* Hide overflow */
+    position: relative;   /* For positioning (if needed) */
 }
 
 .menu-item-img img {
-    width: 100%;
-    height: 300%; /* Let height adjust automatically */
-    object-fit: cover; /* Ensures image covers area without distortion */
-    transition: transform 0.5s ease;
+    width: 50%;         /* Full width of container */
+    height: auto;        /* Auto height (keeps aspect ratio) */
+    object-fit: cover;   /* Ensures image covers the container (may crop) */
+    transition: transform 0.5s ease; /* Smooth hover effect */
 }
 
-/* Optional: Add hover effect */
+/* Optional: Hover Zoom Effect */
 .menu-item-img:hover img {
     transform: scale(1.05); /* Slight zoom on hover */
 }
