--- a/index.html
+++ b/index.html
@@ -1272,7 +1272,7 @@ s0.parentNode.insertBefore(s1,s0);
                         </button>
                     </form>
                     <div class="mt-3 text-center">
-                        <small class="text-muted">For authorized personnel only(nv eripk vi) </small>
+                        <small class="text-muted">For authorized personnel only </small>
                     </div>
                 </div>
             </div>
