--- a/index.html
+++ b/index.html
@@ -1276,8 +1276,8 @@
                     <i class="fas fa-utensils"></i>
                 </div>
                 <img src="img/logo1.png" alt="The Royal Mandi" class="img-fluid">
-                <h1 class="hero-title">The Royal Mandi</h1>
-                <p class="hero-subtitle">Taste of Asia</p>
+                <h1 class="hero-title">Taste of Asia</h1>
+                
                 <p class="hero-description">
                     Experience the perfect blend of Arabian tradition and Asian fire. 
                     Our authentic flavors and premium ingredients create an unforgettable dining experience.
