--- a/index.html
+++ b/index.html
@@ -1219,7 +1219,8 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <div class="logo">
-                    <i class="fas fa-utensils"></i>
+                    <!--<i class="fas fa-utensils"></i>-->
+                    <img src="img/logo1.png" alt="The Royal Mandi" class="img-fluid">
                 </div>
                 <div>
                     <div style="font-size: 1.5rem; font-weight: 700;">The Royal Mandi</div>
