--- a/index.html
+++ b/index.html
@@ -1274,7 +1274,8 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-logo">
-                    <i class="fas fa-utensils"></i>
+                    <!--<i class="fas fa-utensils"></i>-->
+                     <img src="img/log-h.jpg" alt="The Royal Mandi" class="img-fluid">
                 </div>
                 <img src="img/logo1.png" alt="The Royal Mandi" class="img-fluid">
                 <h1 class="hero-title">Taste of Asia</h1>
