--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><defs><pattern id="grain" width="100" height="100" patternUnits="userSpaceOnUse"><circle cx="25" cy="25" r="1" fill="%23E67E22" opacity="0.1"/><circle cx="75" cy="75" r="1" fill="%23E67E22" opacity="0.1"/></pattern></defs><rect width="100" height="100" fill="url(%23grain)"/></svg>');
+            background: url('https//:theroyalmandi.co.uk/img/bg-logo3.jpg');
             opacity: 0.3;
         }
         
@@ -1274,8 +1274,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-logo">
-                    <!--<i class="fas fa-utensils"></i>-->
-                     <img src="img/log-h.jpg" alt="The Royal Mandi" class="img-fluid">
+                    
                 </div>
                 <img src="img/logo1.png" alt="The Royal Mandi" class="img-fluid">
                 <h1 class="hero-title">Taste of Asia</h1>
