--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         /* Enhanced Hero Section */
         .hero-section {
             background: linear-gradient(135deg, rgba(44, 62, 80, 0.9), rgba(230, 126, 34, 0.8)), 
-                        url('https://images.pexels.com/photos/5490965/pexels-photo-5490965.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1080');
+                        url('https://theroyalmandi.co.uk/img/bg-logo3.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -2649,7 +2649,7 @@
         special: true
     },
     {
-        name: "Lamb Brain Fry / Bega Fry",
+        name: "Lamb Brain Fry / Beja Fry",
         price: "£7.50",
         desc: "Fried lamb brain with spices",
         image: "img/lamb-brain.jpg",
@@ -2860,10 +2860,10 @@
         special: false
     },
     {
-        name: "Bagora Rice",
+        name: "Bagara Rice",
         price: "£3.50",
         desc: "Rice tempered with special bagora spices",
-        image: "img/bagora-rice.jpg",
+        image: "img/bagara-rice.jpg",
         category: "rice",
         spice: 2,
         special: false
