--- a/index.html
+++ b/index.html
@@ -3029,7 +3029,7 @@
         name: "Ice cream (all flavours)",
         price: "£3.49",
         desc: "Homemade kulfi in mango, pistachio, rose or vanilla",
-        image: "img/indian-kulfi.jpg",
+        image: "img/all-icecream.jpg",
         category: "desserts",
         spice: 0,
         special: false
