--- a/index.html
+++ b/index.html
@@ -3104,7 +3104,7 @@
             "name": "Limca",
             "price": "£2.00",
             "desc": "Sparkling lime-lemon drink (300ml bottle)",
-            "image": "img/limca-bottle.jpg",
+            "image": "img/limca.jpg",
             "category": "drinks",
             "spice": 0,
             "special": false
