--- a/index.html
+++ b/index.html
@@ -1347,6 +1347,18 @@
                     <i class="fas fa-glass-whiskey"></i>
                     <span>Drinks</span>
                 </button>
+                <button class="filter-btn" data-filter="snacks">
+                    <i class="fas fa-glass-whiskey"></i>
+                    <span>snacks</span>
+                </button>
+                <button class="filter-btn" data-filter="dosa">
+                    <i class="fas fa-glass-whiskey"></i>
+                    <span>dosa</span>
+                    <button class="filter-btn" data-filter="brackkfast">
+                    <i class="fas fa-glass-whiskey"></i>
+                    <span>brackfast</span>
+                </button>
+                </button>
             </div>
             
             <div id="menu-content">
