--- a/index.html
+++ b/index.html
@@ -1354,7 +1354,7 @@
                 <button class="filter-btn" data-filter="dosa">
                     <i class="fas fa-glass-whiskey"></i>
                     <span>dosa</span>
-                    <button class="filter-btn" data-filter="brackkfast">
+                    <button class="filter-btn" data-filter="breakfast">
                     <i class="fas fa-glass-whiskey"></i>
                     <span>brackfast</span>
                 </button>
@@ -3517,9 +3517,9 @@
                 'rice': { name: 'Rice & Noodles', icon: 'fa-utensils' },
                 'bread': { name: 'Fresh Breads', icon: 'fa-bread-slice' },
                 'desserts': { name: 'Sweet Endings', icon: 'fa-ice-cream' },
-                'snacks': { name: 'Refreshing Drinks', icon: 'fa-glass-whiskey' },
-                'breakfast': { name: 'Refreshing Drinks', icon: 'fa-glass-whiskey' },
-                'dosa': { name: 'Refreshing Drinks', icon: 'fa-glass-whiskey' }
+                'dosa': { name: 'Dosa Specials', icon: 'fa-pancakes' }, // or choose an appropriate icon
+                'breakfast': { name: 'Breakfast Items', icon: 'fa-egg' }, // or choose an appropriate icon
+                 'snacks': { name: 'Snacks & Quick Bites', icon: 'fa-cookie' }
             };
             
             const categoryInfo = categoryData[category];
