--- a/index.html
+++ b/index.html
@@ -1301,6 +1301,9 @@
     <!-- Enhanced Menu Section -->
     <section id="menu" class="section">
         <div class="container">
+            <marquee behavior="scroll" direction="left" scrollamount="5">
+             🎉 Today's Special: Masala Dosa Combo only £5.99! • Free Sambar with every Idly order • Try our new Karam Dosa - Spicy Andhra Style! •
+            </marquee>
             <h2 class="section-title">Our Menu</h2>
             <p class="section-subtitle">
                 Discover our carefully crafted dishes, each telling a story of tradition and flavor
