--- a/index.html
+++ b/index.html
@@ -1217,6 +1217,17 @@
                 margin-left: 0;
             }
         }
+          @media (max-width: 768px) {
+  .scrolling-message {
+    font-size: 14px;
+    animation-duration: 30s;
+    padding-right: 70px;
+  }
+  
+  .current-time {
+    font-size: 10px;
+    right: 5px;
+  }
         
         /* Animations */
         @keyframes fadeInUp {
