--- a/index.html
+++ b/index.html
@@ -1295,7 +1295,7 @@
     </style>
 </head>
 <body>
-    <!-- Welcome Popup HTML -->
+    <!-- Welcome Popup HTML --
 <div class="welcome-popup" id="welcomePopup">
   <div class="popup-content">
     <button class="close-btn" onclick="closePopup()">×</button>
@@ -2171,11 +2171,11 @@ document.addEventListener('DOMContentLoaded', function() {
   messageElement.style.backgroundColor = activeMenu.color;
   messageElement.parentNode.style.backgroundColor = activeMenu.color;
   
-  // Add time indicator
+ /* // Add time indicator
   const timeDisplay = document.createElement('div');
   timeDisplay.className = 'current-time';
   timeDisplay.textContent = `Current Time: ${now.getHours()}:${now.getMinutes().toString().padStart(2, '0')}`;
-  messageElement.parentNode.appendChild(timeDisplay);
+  messageElement.parentNode.appendChild(timeDisplay);*/
 });
 </script>
     
